--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
       <div class="hero-body">
     <div class="container is-max-desktop">
-      <div id="results-carousel" class="carousel results-carousel">
+      <div id="results-carousel-quality" class="carousel results-carousel">
       <div class="item item-LJ001-0009">
           <div class="columns is-centered has-text-centered is-vcentered">
             <div class="column">
@@ -715,7 +715,7 @@
 
       <div class="hero-body">
         <div class="container is-max-desktop">
-          <div id="results-carousel" class="carousel results-carousel">
+          <div id="results-carousel-speed" class="carousel results-carousel">
           <div class="item item-LJ001-0009-Speed">
             <div class="columns is-centered has-text-centered is-vcentered">
               <div class="column">
