--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bridge-TTS: Text-to-Speech Synthesis with Schrodinger Bridge</title>
+  <title>Schrodinger Bridges Beat Diffusion Models on Text-to-Speech Synthesis</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
@@ -31,12 +31,28 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Bridge-TTS: Text-to-Speech Synthesis with Schrodinger Bridge</h1>
-            <div class="is-size-5 publication-authors">
-              <span class="author-block">
-                <p>Anonymous authors</p>
-              </span>
+            <h1 class="title is-1 publication-title">Schrodinger Bridges Beat Diffusion Models on Text-to-Speech Synthesis</h1>
+              <div class="is-size-5 publication-authors">
+                <span class="author-block">
+                  <a href="https://scholar.google.com/citations?user=wa04fD4AAAAJ">Zehua Chen</a><sup>*1</sup>,</span>
+                <span class="author-block">
+                  <a href="https://guandehe.github.io">Guande He</a><sup>*1</sup>,</span>
+                <span class="author-block">
+                  <a href="https://github.com/zhengkw18">Kaiwen Zheng</a><sup>*1</sup>,</span>
+                <span class="author-block">
+                  <a href="https://tan-xu.github.io/">Xu Tan</a><sup>2</sup>,</span>
+                <span class="author-block">
+                  <a href="https://ml.cs.tsinghua.edu.cn/~jun/">Jun Zhu</a><sup>1</sup>
+                </span>
+              </div>
+              <div class="is-size-5 publication-authors">
+                <span class="author-block"><sup>*</sup>Equal contribution.</span>
+              </div>
+              <div class="is-size-5 publication-authors">
+                <span class="author-block"><sup>1</sup>Tsinghua University,</span>
+                <span class="author-block"><sup>2</sup>Microsoft Research Asia</span>
             </div>
+
           </div>
         </div>
       </div>
@@ -1131,35 +1147,7 @@
 
 
 
-  </section>
-
-  <section class="section">
-    <div class="container is-max-desktop">
-
-      <div class="columns is-centered">
-        <div class="column is-full-width">
-          <h2 class="title is-3">Related Links</h2>
-
-          <div class="content has-text-justified">
-            <p><a href="https://github.com/jik876/hifi-gan">HiFi-GAN</a> model is used as vocoder.</p>
-            <p>
-              There are a lot of excellent works that are related to Bridge-TTS:
-            </p>
-            <p>
-              <a href="https://github.com/huawei-noah/Speech-Backbones/tree/main/Grad-TTS">Grad-TTS</a>, 
-              <a href="https://github.com/MoonInTheRiver/DiffSinger">DiffSinger</a>,
-              <a href="https://comospeech.github.io/">CoMoSpeech</a>,
-              <a href="https://github.com/Rongjiehuang/ProDiff">ProDiff</a>.
-
-            </p>
-          </div>
-        </div>
-      </div>
-
-
-    </div>
-  </section>
-
+  </section> 
 
   <footer class="footer">
     <div class="container">
