--- a/index.html
+++ b/index.html
@@ -42,18 +42,78 @@
                 <span class="author-block">
                   <a href="https://tan-xu.github.io/">Xu Tan</a><sup>2</sup>,</span>
                 <span class="author-block">
-                  <a href="https://ml.cs.tsinghua.edu.cn/~jun/">Jun Zhu</a><sup>1</sup>
+                  <a href="https://ml.cs.tsinghua.edu.cn/~jun/">Jun Zhu</a><sup>&#8224;1</sup>
                 </span>
               </div>
               <div class="is-size-5 publication-authors">
-                <span class="author-block"><sup>*</sup>Equal contribution.</span>
+                <span class="author-block">&nbsp;&nbsp;&nbsp;&nbsp;<sup>*</sup>Equal contribution&nbsp;&nbsp;&nbsp;&nbsp;<sup>&#8224;</sup>Corresponding Author</span>
               </div>
               <div class="is-size-5 publication-authors">
-                <span class="author-block"><sup>1</sup>Tsinghua University,</span>
+                <span class="author-block">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>1</sup>Tsinghua University,</span>
                 <span class="author-block"><sup>2</sup>Microsoft Research Asia</span>
             </div>
 
           </div>
+        </div>
+        <div class="column has-text-centered">
+              <div class="publication-links">
+                <!-- PDF Link. -->
+                <span class="link-block">
+                  <a href="https://arxiv.org/pdf/2312.03491.pdf"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Paper</span>
+                  </a>
+                </span>
+                <span class="link-block">
+                  <a href="https://arxiv.org/abs/2312.03491" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                    </span>
+                    <span>arXiv</span>
+                  </a>
+                </span>
+                <!-- <span class="link-block">
+                <a href="./static/prolificdreamer.ppsx"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-powerpoint"></i>
+                  </span>
+                  <span>Slides</span>
+                </a>
+              </span> -->
+                <!-- Video Link. -->
+                <!-- <span class="link-block">
+                <a href=""
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-youtube"></i>
+                  </span>
+                  <span>Video</span>
+                </a>
+              </span> -->
+                <!-- Code Link. -->
+                <span class="link-block">
+                  <a href="https://github.com/thu-ml/Bridge-TTS"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>Code (Coming Soon)</span>
+                  </a>
+                </span>
+                <span class="link-block">
+                  <a href="#BibTeX" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fa fa-quote-left"></i>
+                    </span>
+                    <span>Cite</span>
+                  </a>
+                </span>
+              </div>
+
         </div>
       </div>
     </div>
@@ -1148,7 +1208,17 @@
 
 
   </section> 
-
+  <section class="section" id="BibTeX">
+      <div class="container is-max-desktop content">
+        <h2 class="title">BibTeX</h2>
+        <pre><code>@misc{chen2023schrodinger,
+  title={Schrodinger Bridges Beat Diffusion Models on Text-to-Speech Synthesis}, 
+  author={Zehua Chen and Guande He and Kaiwen Zheng and Xu Tan and Jun Zhu},
+  year={2023},
+}
+  </code></pre>
+      </div>
+    </section>
   <footer class="footer">
     <div class="container">
 
